# brainfuck-jit-compiler

./: .gitignore  Cargo.toml  Makefile  README.md
src/: lib.rs  main.rs
src/lib/: command.rs  compiler.rs  interpreter.rs  optimized_command.rs  optimized_compiler.rs  optimized_interpreter.rs  optimized_program.rs  program.rs
