[package]
name = "brainfuck-jit-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Clément CHAPOT <clement.chapot@polytechnique.edu>"]
description = "Interpreter and JIT compiler for the brainfuck language"
readme = "README.md"
repository = "https://github.com/clemsys/brainfuck-jit-compiler"
license = "MIT"
categories = ["compilers", "command-line-utilities"]

[dependencies]
clap = { version = "4.5.1", features = ["cargo"] }

[dev-dependencies]
assert_cmd = "2.0.13"

[profile.release]
strip = true
lto = true
panic = "abort"
