[package]
name = "brainfuck-jit-compiler"
version = "0.1.0"
edition = "2021"
authors = ["Clément CHAPOT <clement.chapot@polytechnique.edu>"]
description = "x86_64 JIT compiler and interpreter for the brainfuck language"
readme = "README.md"
repository = "https://github.com/clemsys/brainfuck-jit-compiler"
license = "MIT"
categories = ["compilers", "command-line-utilities"]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
memmap = "0.7.0"

[profile.release]
strip = true
lto = true
panic = "abort"
